--- a/proyecto-php/assets/css/style.css
+++ b/proyecto-php/assets/css/style.css
@@ -13,14 +13,138 @@
 }
 
 body{
-    background: red;
+    background: url(../img/fondo.jpg) #F4F4F4;
 }
 
 /*CABECERA*/
-#cabecera{
-    width: 1250px;
+#header{
+    width: 85%;
     height: auto;
     background: transparent;
     margin: 0px auto;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
+}
+
+/*LOGOTIPO*/
+#logo{
+    float: left;
+    width: 540px;
+    height: 100px;
+}
+
+#logo a{
+    font-family: 'Consolas';
+    font-size: 40px;
+    letter-spacing: 2px;
+    color: #2979CD;
+    text-shadow: 0px 0px 0px black, 1px 1px 0px black, 2px 2px 0px black;
+    transition: all 500ms;
+    line-height: 80px;
+    margin-left: 10px;
+}
+
+#logo a:hover{
+    cursor: pointer;
+    text-shadow: 0px 0px 0px black, -1px -1px 0px black, -2px -2px 0px black;
+}
+
+/*MENU*/
+#nav{
+    clear: both;
+    width: 100%;
+    height: 45px;
+    background: linear-gradient(to bottom, #F9F9F9 0px, #E9E9E9 100%);
+    border: 1px solid #C9C9C9;
+    border-radius: 8px;
+    box-shadow: 0px 1px 1px #ccc;
+    overflow: hidden;
+}
+
+#nav ul{
+    list-style: none;
+}
+
+#nav ul li{
+    float: left;
+    line-height: 45px;
+    border-right: 1px solid #D6D6D6;
+}
+
+#nav ul li a{
+    display: block;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 16px;
+    color: #838282;
+}
+
+#nav ul li a:hover{
+    background: linear-gradient(to bottom, #F2F2F2 0px, #DAD9D4 100%);
+}
+
+/*CONTENIDO*/
+#container{
+    width: 85%;
+    min-height: 550px;
+    margin: 0px auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+/*BARRA LATERAL*/
+#sidebar{
+    float: right;
+    width: 100px;
+    min-height: 600px;
+}
+
+/*PRINCIPAL*/
+#principle{
+    float: left;
+    width: 70%;
+    min-height: 550px;
+    background: white;
+    border-right: 5px;
+    box-shadow: 0px 0px 5px #ccc;
+    margin-left: 20px;
+    padding: 20px;
+    overflow: hidden;
+}
+
+#principle a{
+    color: #333;
+}
+
+#principle h1{
+    font-size: 32px;
+    color: #444;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px #ccc;
+    font-family: 'Consolas';
+}
+
+#principle h2{
+    font-size: 20px;
+    color: #2979CD;
+    letter-spacing: 1px;
+    text-shadow: 1px 1px 2px #ccc;
+    font-family: 'Consolas';
+    margin-top: 25px;
+}
+
+#principle p{
+    margin-top: 8px;
+}
+
+#view-all a{
+    display: block;
+    border-radius: 2px;
+    padding: 15px;
+    color: white;
+    background: #007ee5;
+    border: 1px solid #156785;
+    cursor: pointer;
+    width: 215px;
+    margin: 0px auto;
+    margin-top: 40px;
 }
