--- a/proyecto-php/assets/css/style.css
+++ b/proyecto-php/assets/css/style.css
@@ -85,7 +85,8 @@ body{
 /*CONTENIDO*/
 #container{
     width: 85%;
-    min-height: 550px;
+    height: auto;
+    /*min-height: auto;*/
     margin: 0px auto;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -94,15 +95,59 @@ body{
 /*BARRA LATERAL*/
 #sidebar{
     float: right;
-    width: 100px;
-    min-height: 600px;
+    width: 27%;
+    height: auto;
+}
+
+.block-aside{
+    display: block;
+    width: 90%;
+    margin: 0px auto;
+    margin-bottom: 35px;
+    background: white;
+    padding: 15px;
+    box-shadow: 0px 0px 1px rgba(0,0,0,0.3), 0px 3px 7px rgba(0,0,0,0.3), 0px 0px 1px #FFFFFF inset, 0px -3px 2px rgba(0,0,0,0.25) inset;
+}
+
+.block-aside h3{
+    margin-bottom: 15px;
+}
+
+label,
+input[type="text"],
+input[type="email"],
+input[type="password"]{
+    display: block;
+    width: 95%;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"]{
+    padding: 5px;
+    margin-bottom: 10px;
+}
+
+input[type="button"],
+input[type="submit"]{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: block;
+    border-radius: 2px;
+    color: white;
+    background: #007ee5;
+    border: 1px solid #156785;
+    cursor: pointer;
+    padding: 7px;
 }
 
 /*PRINCIPAL*/
 #principle{
     float: left;
-    width: 70%;
-    min-height: 550px;
+    width: 65%;
+    min-height: 570px;
     background: white;
     border-right: 5px;
     box-shadow: 0px 0px 5px #ccc;
@@ -146,5 +191,20 @@ body{
     cursor: pointer;
     width: 215px;
     margin: 0px auto;
-    margin-top: 40px;
+    margin-top: 50px;
+}
+
+/*PIE DE PÁGINA*/
+#footer{
+    width: 83%;
+    clear: both;
+    margin: 0px auto;
+    background: linear-gradient(to bottom, #F9F9F9 0px, #E9E9E9 100%);
+    border: 1px solid #C9C9C9;
+    border-bottom: none;
+    border-right: 8px 8px 0px 0px;
+    color: #666;
+    height: auto;
+    padding: 15px;
+    text-align: center;
 }
