--- a/proyecto-php/assets/css/style.css
+++ b/proyecto-php/assets/css/style.css
@@ -174,6 +174,12 @@ input[type="submit"],
     background-color: red;
 }
 
+.fecha {
+    color: #4e4e4e;
+    margin-top: 5px;
+    font-size: 14px;
+}
+
 /*PRINCIPAL*/
 #principle{
     float: left;
