--- a/proyecto-laravel/public/css/style.css
+++ b/proyecto-laravel/public/css/style.css
@@ -3,14 +3,73 @@
     margin-bottom: 15px;
 }
 
-.navbar .container-avatar{
+.navbar .container-avatar,
+.pub_image .container-avatar{
     width: 35px;
-    height: 35;
+    height: 35px;
     border-radius: 900px;
     overflow: hidden;
     margin-left: 15px;
 }
 
-.navbar .container-avatar{
+.navbar .container-avatar img,
+.pub_image .container-avatar img{
     height: 100%;
+}
+
+.pub_image{
+    margin-bottom: 25px;
+}
+
+.pub_image .container-avatar{
+    float: left;
+    margin-right: 15px;
+}
+
+.pub_image .data-user{
+    font-weight: bold;
+    line-height: 35px;
+}
+
+.pub_image .data-user a{
+    color: #444;
+}
+
+.pub_image .nickname{
+    color: gray;
+}
+
+.image-container{
+    width: 100%;
+    max-height: 400px;
+    overflow: hidden;
+}
+
+.image-container img{
+    width: 100%;
+}
+
+.pub_image .card-body{
+    padding: 0;
+}
+
+.pub_image .description{
+    padding: 20px;
+    padding-bottom: 0;
+}
+
+.pub_image .btn-comments{
+    margin: 20px;
+    margin-top: 0;
+    margin-left: 0;
+}
+
+.likes{
+    float: left;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+.likes img{
+    width: 20px;
 }
